dataset1235/2025-2/1955397009/users/209087680/executions/1686127217_854576230.log
== SUBMISSION (2025-08-12 13:33:07)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:31:28)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(Ada Lovelace foi a primeira programadora da historia.upper)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:32:45)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:33:21)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:31:51)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:30:55)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print.upper(Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print.upper(Ada Lovelace foi a primeira programadora da historia)
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print.upper(Ada Lovelace foi a primeira programadora da historia)
                ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:31:49)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:32:43)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:33:22)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:30:33)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(.upper(Ada Lovelace foi a primeira programadora da historia))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper(Ada Lovelace foi a primeira programadora da historia))
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper(Ada Lovelace foi a primeira programadora da historia))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:31:26)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(Ada Lovelace foi a primeira programadora da historia.upper)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:31:52)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:32:29)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x000002045B02CF10>
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x000001A32075CF10>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:32:01)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:31:25)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(Ada Lovelace foi a primeira programadora da historia.upper)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:31:48)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
